--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@vercel/postgres": "^0.10.0",
+    "better-auth": "^1.2.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -45,8 +47,10 @@
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.16.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.513.0",
+    "motion": "^12.16.0",
     "next": "15.3.3",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
