--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DATABASE_URL=postgres://panache:panache@localhost/panache
 RESEND_API_KEY=apikey
 RESEND_FROM_MAIL=info@panache.social
+GOOGLE_CLIENT_ID=some_id
+GOOGLE_CLIENT_SECRET=some_secret
